Bug #21790: updated pom files, removed unneeded dependencies, could NOT fix maven package JavaFX issue.